feat: add random activity rewards
